Ran findBugs on console, and got rid of some inefficiencies, added some generics, and also added an option for console to use jEdit's textArea background color.